--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,9 @@ dependencies {
     androidTestImplementation composeBom
 
     implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.activity:activity-compose:1.8.0'
     implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.runtime:runtime-livedata'
     debugImplementation 'androidx.compose.ui:ui-tooling'
 
     implementation 'androidx.core:core-ktx:1.7.0'
