--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,7 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.49"
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.2'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
